--- a/src/GoldenRaspberryAwards.Infrastructure/GoldenRaspberryAwards.Infrastructure.csproj
+++ b/src/GoldenRaspberryAwards.Infrastructure/GoldenRaspberryAwards.Infrastructure.csproj
@@ -5,5 +5,12 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+	
+  <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.1.66" />
+    <PackageReference Include="Microsoft.Data.Sqlite" Version="10.0.1" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="10.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="10.0.1" />
+  </ItemGroup>
 
 </Project>
