--- a/src/GoldenRaspberryAwards.Infrastructure/GoldenRaspberryAwards.Infrastructure.csproj
+++ b/src/GoldenRaspberryAwards.Infrastructure/GoldenRaspberryAwards.Infrastructure.csproj
@@ -12,5 +12,9 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="10.0.1" />
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="10.0.1" />
   </ItemGroup>
+	
+  <ItemGroup>
+    <ProjectReference Include="..\GoldenRaspberryAwards.Domain\GoldenRaspberryAwards.Domain.csproj" />
+  </ItemGroup>
 
 </Project>
