--- a/src/GoldenRaspberryAwards.API/GoldenRaspberryAwards.API.csproj
+++ b/src/GoldenRaspberryAwards.API/GoldenRaspberryAwards.API.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="10.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\GoldenRaspberryAwards.Domain\GoldenRaspberryAwards.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
