--- a/src/GoldenRaspberryAwards.API/GoldenRaspberryAwards.API.csproj
+++ b/src/GoldenRaspberryAwards.API/GoldenRaspberryAwards.API.csproj
@@ -8,10 +8,16 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="10.0.1" />
+	<PackageReference Include="Swashbuckle.AspNetCore" Version="7.2.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\GoldenRaspberryAwards.Domain\GoldenRaspberryAwards.Domain.csproj" />
+    <ProjectReference Include="..\GoldenRaspberryAwards.Infrastructure\GoldenRaspberryAwards.Infrastructure.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Data\" />
   </ItemGroup>
 
 </Project>
