--- a/tests/GoldenRaspberryAwards.Tests/GoldenRaspberryAwards.Tests.csproj
+++ b/tests/GoldenRaspberryAwards.Tests/GoldenRaspberryAwards.Tests.csproj
@@ -8,14 +8,28 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="coverlet.collector" Version="6.0.4" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.14.1" />
-    <PackageReference Include="xunit" Version="2.9.3" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="3.1.4" />
+	<PackageReference Include="coverlet.collector" Version="6.0.4" />
+	<PackageReference Include="FluentAssertions" Version="8.8.0" />
+	<PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="10.0.1" />
+	<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.14.1" />
+	<PackageReference Include="xunit" Version="2.9.3" />
+	<PackageReference Include="xunit.runner.visualstudio" Version="3.1.4" />
   </ItemGroup>
 
   <ItemGroup>
     <Using Include="Xunit" />
+  </ItemGroup>
+
+  <ItemGroup>
+  	<None Update="Data\movielist.csv">
+  		<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+  	</None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\GoldenRaspberryAwards.API\GoldenRaspberryAwards.API.csproj" />
+    <ProjectReference Include="..\..\src\GoldenRaspberryAwards.Domain\GoldenRaspberryAwards.Domain.csproj" />
+    <ProjectReference Include="..\..\src\GoldenRaspberryAwards.Infrastructure\GoldenRaspberryAwards.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
