--- a/tests/GoldenRaspberryAwards.Tests/GoldenRaspberryAwards.Tests.csproj
+++ b/tests/GoldenRaspberryAwards.Tests/GoldenRaspberryAwards.Tests.csproj
@@ -21,7 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-  	<None Update="Data\movielist.csv">
+  	<None Update="Data\**\*">
   		<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
   	</None>
   </ItemGroup>
