--- a/tests/GoldenRaspberryAwards.Tests/GoldenRaspberryAwards.Tests.csproj
+++ b/tests/GoldenRaspberryAwards.Tests/GoldenRaspberryAwards.Tests.csproj
@@ -32,4 +32,10 @@
     <ProjectReference Include="..\..\src\GoldenRaspberryAwards.Infrastructure\GoldenRaspberryAwards.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Data\Movielist.csv">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
