chore: changed file name

--- a/tests/GoldenRaspberryAwards.Tests/GoldenRaspberryAwards.Tests.csproj
+++ b/tests/GoldenRaspberryAwards.Tests/GoldenRaspberryAwards.Tests.csproj
@@ -33,7 +33,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="Data\Movielist.csv">
+    <None Update="Data\movielist.csv">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
