--- a/src/GoldenRaspberryAwards.Application/GoldenRaspberryAwards.Application.csproj
+++ b/src/GoldenRaspberryAwards.Application/GoldenRaspberryAwards.Application.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Logging" Version="10.0.1" />
+    <ProjectReference Include="..\GoldenRaspberryAwards.Domain\GoldenRaspberryAwards.Domain.csproj" />
   </ItemGroup>
 
 </Project>
